{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 320,
  "lineage": "88d23b86-5b5b-170c-23bd-7b637811901f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ecs-cluster-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00666d5f5d94d6473",
            "arn": "arn:aws:ec2:us-east-1:513073199398:instance/i-06d1aa1ac121a4cc5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d1aa1ac121a4cc5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-083eda3ba18435d6c",
            "private_dns": "ip-10-0-1-208.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-3-236-14-117.compute-1.amazonaws.com",
            "public_ip": "3.236.14.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f103da7f35005d32",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e89e020b245579d7",
            "tags": {
              "Environment": "var.app_environment",
              "Name": "ecs-cluster-ec2",
              "Role": "ecs-cluster"
            },
            "tags_all": {
              "Environment": "var.app_environment",
              "Name": "ecs-cluster-ec2",
              "Role": "ecs-cluster"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Environment": "var.app_environment",
              "Name": "var.app_name-ecs-cluster-ec2",
              "Role": "ecs-cluster"
            },
            "vpc_security_group_ids": [
              "sg-0ecc090b5b7d710d5"
            ]
          },
          "dependencies": [
            "aws_security_group.ecs-cluster-host",
            "aws_subnet.aws-subnet",
            "data.aws_ami.ecs-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513073199398:internet-gateway/igw-0d4e5425b6bb64ebb",
            "id": "igw-0d4e5425b6bb64ebb",
            "owner_id": "513073199398",
            "tags": {
              "Environment": "var.app_environment",
              "Name": "var.app_name-igw"
            },
            "tags_all": {
              "Environment": "var.app_environment",
              "Name": "var.app_name-igw"
            },
            "vpc_id": "vpc-05e4d9a391be07328"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "aws-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6c155abecdb9286",
            "original_route_table_id": "rtb-05d6d11af9ecc3285",
            "route_table_id": "rtb-03edbb542a7392846",
            "vpc_id": "vpc-05e4d9a391be07328"
          },
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_route_table.aws-route-table",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513073199398:route-table/rtb-03edbb542a7392846",
            "id": "rtb-03edbb542a7392846",
            "owner_id": "513073199398",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d4e5425b6bb64ebb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "var.app_environment",
              "Name": "var.app_name-route-table"
            },
            "tags_all": {
              "Environment": "var.app_environment",
              "Name": "var.app_name-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e4d9a391be07328"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-cluster-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513073199398:security-group/sg-0ecc090b5b7d710d5",
            "description": "ecs-cluster-host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0ecc090b5b7d710d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Service ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Service tcp",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Service tcp",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-cluster-host",
            "name_prefix": "",
            "owner_id": "513073199398",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "ssh"
            },
            "tags_all": {
              "name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e4d9a391be07328"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513073199398:subnet/subnet-0e89e020b245579d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e89e020b245579d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "513073199398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05e4d9a391be07328"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513073199398:vpc/vpc-05e4d9a391be07328",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0451e19c4ec26102c",
            "default_route_table_id": "rtb-03edbb542a7392846",
            "default_security_group_id": "sg-0189e501d0fbd45f4",
            "dhcp_options_id": "dopt-062db39e260322c33",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e4d9a391be07328",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03edbb542a7392846",
            "owner_id": "513073199398"
          }
        }
      ]
    }
  ]
}